[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies and Bosses/[BOSS] DIO.gd" type="Script" id=1]
[ext_resource path="res://Other Images/HealthBar Simplified/Under.png" type="Texture" id=2]
[ext_resource path="res://Other Images/HealthBar Simplified/Over.png" type="Texture" id=3]
[ext_resource path="res://Other Images/HealthBar Simplified/Progress.png" type="Texture" id=4]
[ext_resource path="res://Sprites/DIO/0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/DIO/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/DIO/2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/DIO/3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/DIO/6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/DIO/7.png" type="Texture" id=10]
[ext_resource path="res://Sprites/DIO/8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/DIO/9.png" type="Texture" id=12]
[ext_resource path="res://Sprites/DIO/87.png" type="Texture" id=13]
[ext_resource path="res://Sprites/DIO/88.png" type="Texture" id=14]
[ext_resource path="res://Sounds/Megabuster/buster shot hit wall.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/DIO Voices/Hitotsu chansu.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/DIO Voices/WRRRYYYY.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/DIO Voices/ZA WARUDO.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/DIO Voices/Noroi Noroi.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "SmallBlast",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "ZaWarudoDash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="[BOSS] DIO" type="KinematicBody2D"]
editor/display_folded = true
script = ExtResource( 1 )

[node name="HP_Bar" type="TextureProgress" parent="."]
margin_left = -29.3188
margin_top = -42.2319
margin_right = 1149.68
margin_bottom = 47.7681
rect_scale = Vector2( 0.05, 0.1 )
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.75 )
scale = Vector2( 0.5, 0.975 )
shape = SubResource( 2 )

[node name="LeftProjectilePos" type="Position2D" parent="."]
position = Vector2( -32, 0.75 )

[node name="RightProjectilePos" type="Position2D" parent="."]
position = Vector2( 32, 0.75 )

[node name="GroundRaycast" type="RayCast2D" parent="."]
position = Vector2( 15.25, 0 )
enabled = true
cast_to = Vector2( 0, 32.5 )

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="BulletHit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 15 )

[node name="HitotsuChansu" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )
volume_db = 12.0

[node name="WRRRYYYY" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )
volume_db = 12.0

[node name="ZaWarudo" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )
volume_db = 14.0

[node name="Noroi" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 19 )
volume_db = 12.0
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
